# ncm_2_mp3

./: CMakeLists.txt  MusicFile.cpp  MusicFile.h  README.md  converter.cpp  converter.h  dirent.h  install.nsi  installer.nsi  main.cpp  model.c  model.h  ncm2mp3.pro  ncm2mp3.pro.user.462f80b  ncm2mp3.pro.user.c10abce  num_2_mp3.sln  num_2_mp3.vcxproj  num_2_mp3.vcxproj.filters  widget.cpp  widget.h
.github/workflows/: qt6-windows-ci-cd.yml
resources/: resources.qrc
resources/styles/: style.qss
src/: main.cpp  model.c  widget.cpp  widget.h  widget.ui
src/converter/: converter.cpp  converter.h  model.c  model.h
src/delegate/: item_delegate.cpp  item_delegate.h
src/model/: file_model.cpp  file_model.h
